[package]
name = "substrate-client-keystore"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[dependencies]
parking_lot = "0.11.1"
async-trait = "0.1.30"
hex = "0.4"
serde_json = "1.0"

# Substrate dependencies
sp-core = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev ="7c6342047c992b6f3fa917d0d0448eb7e89afa6c" }
sp-keystore = { version = "0.11.0", git = "https://github.com/paritytech/substrate.git", rev ="7c6342047c992b6f3fa917d0d0448eb7e89afa6c" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev ="7c6342047c992b6f3fa917d0d0448eb7e89afa6c" }
sp-keyring = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", rev ="7c6342047c992b6f3fa917d0d0448eb7e89afa6c" }
sp-application-crypto = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", rev ="7c6342047c992b6f3fa917d0d0448eb7e89afa6c" }

[dev-dependencies]
tempfile = "3.2.0"
