[package]
name = "api-client-tutorial"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[dependencies]
substrate-api-client = { path = "../.." }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }

sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", rev ="7c6342047c992b6f3fa917d0d0448eb7e89afa6c" }
sp-keyring = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", rev ="7c6342047c992b6f3fa917d0d0448eb7e89afa6c" }
